# CLCXX-ECL

./: .gitignore  CLCxxConfig.cmake.in  CMakeLists.txt  README.md
include/clcxx/: array.hpp  class.hpp  clcxx.hpp  const_array.hpp  functions.hpp  package.hpp  type_conversion.hpp
src/: c_interface.cpp  class.cpp  clcxx.cpp  functions.cpp  test.cpp
test/include/clcxx/: array.hpp  class.hpp  clcxx.hpp  functions.hpp  module.hpp  smart_pointers.hpp  type_conversion.hpp
test/src/: c_interface.cpp  clcxx.cpp  functions.cpp
